Lower memory usage of Banana Mirror check