@@ -267,53 +267,55 @@ public class CelesteStuffHealthCheck {
 
             log.debug("Checking Banana Mirror contents ({})...", mirror);
 
-            // === zips referenced in everest_update.yaml should be present at https://celestemodupdater.0x0a.de/banana-mirror/
-            List<String> bananaMirror = ConnectionUtils.jsoupGetWithRetry(mirror + "/banana-mirror/")
-                    .select("td.indexcolname a")
-                    .stream()
-                    .map(a -> mirror + "/banana-mirror/" + a.attr("href"))
-                    .filter(item -> !item.equals(mirror + "/banana-mirror//"))
-                    .sorted()
-                    .toList();
-
-            List<String> everestUpdate;
-            try (InputStream is = ConnectionUtils.openStreamWithTimeout("https://maddie480.ovh/celeste/everest_update.yaml")) {
-                Map<String, Map<String, Object>> mapped = YamlUtil.load(is);
-                everestUpdate = mapped.values()
+            { // === zips referenced in everest_update.yaml should be present at https://celestemodupdater.0x0a.de/banana-mirror/
+                List<String> bananaMirror = ConnectionUtils.jsoupGetWithRetry(mirror + "/banana-mirror/")
+                        .select("td.indexcolname a")
                         .stream()
-                        .map(item -> item.get(Main.serverConfig.mainServerIsMirror ? "URL" : "MirrorURL")
-                                .toString().replace("https://celestemodupdater.0x0a.de", mirror))
+                        .map(a -> mirror + "/banana-mirror/" + a.attr("href"))
+                        .filter(item -> !item.equals(mirror + "/banana-mirror//"))
                         .sorted()
-                        .collect(Collectors.toList());
+                        .toList();
+
+                List<String> everestUpdate;
+                try (InputStream is = ConnectionUtils.openStreamWithTimeout("https://maddie480.ovh/celeste/everest_update.yaml")) {
+                    Map<String, Map<String, Object>> mapped = YamlUtil.load(is);
+                    everestUpdate = mapped.values()
+                            .stream()
+                            .map(item -> item.get(Main.serverConfig.mainServerIsMirror ? "URL" : "MirrorURL")
+                                    .toString().replace("https://celestemodupdater.0x0a.de", mirror))
+                            .sorted()
+                            .collect(Collectors.toList());
+                }
+
+                if (!bananaMirror.equals(everestUpdate)) {
+                    throw new IOException("Banana Mirror contents at " + mirror + " don't match the mod updater database");
+                }
             }
 
-            if (!bananaMirror.equals(everestUpdate)) {
-                throw new IOException("Banana Mirror contents at " + mirror + " don't match the mod updater database");
-            }
-
-            // === images referenced in mod_search_database.yaml should be present at https://celestemodupdater.0x0a.de/banana-mirror-images/
-            List<String> bananaMirrorImages = ConnectionUtils.jsoupGetWithRetry(mirror + "/banana-mirror-images/")
-                    .select("td.indexcolname a")
-                    .stream()
-                    .map(a -> mirror + "/banana-mirror-images/" + a.attr("href"))
-                    .filter(item -> !item.equals(mirror + "/banana-mirror-images//"))
-                    .sorted()
-                    .toList();
-
-            List<String> modSearchDatabase;
-            try (InputStream is = ConnectionUtils.openStreamWithTimeout("https://maddie480.ovh/celeste/mod_search_database.yaml")) {
-                List<Map<String, Object>> mapped = YamlUtil.load(is);
-                modSearchDatabase = mapped.stream()
-                        .map(item -> (List<String>) item.get("MirroredScreenshots"))
-                        .flatMap(List::stream)
-                        .distinct()
+            { // === images referenced in mod_search_database.yaml should be present at https://celestemodupdater.0x0a.de/banana-mirror-images/
+                List<String> bananaMirrorImages = ConnectionUtils.jsoupGetWithRetry(mirror + "/banana-mirror-images/")
+                        .select("td.indexcolname a")
+                        .stream()
+                        .map(a -> mirror + "/banana-mirror-images/" + a.attr("href"))
+                        .filter(item -> !item.equals(mirror + "/banana-mirror-images//"))
                         .sorted()
-                        .map(i -> i.replace("https://celestemodupdater.0x0a.de", mirror))
-                        .collect(Collectors.toList());
-            }
+                        .toList();
 
-            if (!bananaMirrorImages.equals(modSearchDatabase)) {
-                throw new IOException("Banana Mirror Images contents at " + mirror + " don't match the mod updater database");
+                List<String> modSearchDatabase;
+                try (InputStream is = ConnectionUtils.openStreamWithTimeout("https://maddie480.ovh/celeste/mod_search_database.yaml")) {
+                    List<Map<String, Object>> mapped = YamlUtil.load(is);
+                    modSearchDatabase = mapped.stream()
+                            .map(item -> (List<String>) item.get("MirroredScreenshots"))
+                            .flatMap(List::stream)
+                            .distinct()
+                            .sorted()
+                            .map(i -> i.replace("https://celestemodupdater.0x0a.de", mirror))
+                            .collect(Collectors.toList());
+                }
+
+                if (!bananaMirrorImages.equals(modSearchDatabase)) {
+                    throw new IOException("Banana Mirror Images contents at " + mirror + " don't match the mod updater database");
+                }
             }
 
             // these mirrors don't have Rich Presence icons
@@ -322,53 +324,54 @@ public class CelesteStuffHealthCheck {
                 continue;
             }
 
-            // === Rich Presence icons we saved locally should be present at https://celestemodupdater.0x0a.de/rich-presence-icons/
-            List<String> richPresenceIcons = ConnectionUtils.jsoupGetWithRetry(mirror + "/rich-presence-icons/")
-                    .select("td.indexcolname a")
-                    .stream()
-                    .map(a -> mirror + "/rich-presence-icons/" + a.attr("href"))
-                    .filter(item -> !item.equals(mirror + "/rich-presence-icons//") && !item.equals(mirror + "/rich-presence-icons/list.json"))
-                    .sorted()
-                    .toList();
-
-            List<String> richPresenceIconsLocal;
-            try (InputStream is = Files.newInputStream(Paths.get("banana_mirror_rich_presence_icons.yaml"))) {
-                Map<String, Map<String, List<String>>> mapped = YamlUtil.load(is);
-
-                for (Map.Entry<String, List<String>> hashToFiles : mapped.get("HashesToFiles").entrySet()) {
-                    for (String file : hashToFiles.getValue()) {
-                        if (!mapped.get("FilesToHashes").get(file).contains(hashToFiles.getKey())) {
-                            throw new IOException("Backwards link for " + hashToFiles.getKey() + " => " + file + " does not exist!");
-                        }
-                    }
-                }
-                for (Map.Entry<String, List<String>> fileToHashes : mapped.get("FilesToHashes").entrySet()) {
-                    for (String hash : fileToHashes.getValue()) {
-                        if (!mapped.get("HashesToFiles").get(hash).contains(fileToHashes.getKey())) {
-                            throw new IOException("Backwards link for " + fileToHashes.getKey() + " => " + hash + " does not exist!");
-                        }
-                    }
-                }
-
-                richPresenceIconsLocal = mapped.get("HashesToFiles").keySet().stream()
-                        .map(a -> mirror + "/rich-presence-icons/" + a + ".png")
+            { // === Rich Presence icons we saved locally should be present at https://celestemodupdater.0x0a.de/rich-presence-icons/
+                List<String> richPresenceIcons = ConnectionUtils.jsoupGetWithRetry(mirror + "/rich-presence-icons/")
+                        .select("td.indexcolname a")
+                        .stream()
+                        .map(a -> mirror + "/rich-presence-icons/" + a.attr("href"))
+                        .filter(item -> !item.equals(mirror + "/rich-presence-icons//") && !item.equals(mirror + "/rich-presence-icons/list.json"))
                         .sorted()
-                        .collect(Collectors.toList());
-            }
+                        .toList();
 
-            // and they should also match the list present at list.json
-            JSONArray richPresenceIconListJson;
-            try (InputStream is = ConnectionUtils.openStreamWithTimeout(mirror + "/rich-presence-icons/list.json")) {
-                richPresenceIconListJson = new JSONArray(IOUtils.toString(is, UTF_8));
-            }
-            List<String> richPresenceIconsList = new ArrayList<>();
-            for (Object o : richPresenceIconListJson) {
-                richPresenceIconsList.add(mirror + "/rich-presence-icons/" + o + ".png");
-            }
-            richPresenceIconsList.sort(Comparator.naturalOrder());
+                List<String> richPresenceIconsLocal;
+                try (InputStream is = Files.newInputStream(Paths.get("banana_mirror_rich_presence_icons.yaml"))) {
+                    Map<String, Map<String, List<String>>> mapped = YamlUtil.load(is);
 
-            if (!richPresenceIcons.equals(richPresenceIconsLocal) || !richPresenceIcons.equals(richPresenceIconsList)) {
-                throw new IOException("Banana Mirror Rich Presence Icons contents at " + mirror + " don't match the ones we have saved locally");
+                    for (Map.Entry<String, List<String>> hashToFiles : mapped.get("HashesToFiles").entrySet()) {
+                        for (String file : hashToFiles.getValue()) {
+                            if (!mapped.get("FilesToHashes").get(file).contains(hashToFiles.getKey())) {
+                                throw new IOException("Backwards link for " + hashToFiles.getKey() + " => " + file + " does not exist!");
+                            }
+                        }
+                    }
+                    for (Map.Entry<String, List<String>> fileToHashes : mapped.get("FilesToHashes").entrySet()) {
+                        for (String hash : fileToHashes.getValue()) {
+                            if (!mapped.get("HashesToFiles").get(hash).contains(fileToHashes.getKey())) {
+                                throw new IOException("Backwards link for " + fileToHashes.getKey() + " => " + hash + " does not exist!");
+                            }
+                        }
+                    }
+
+                    richPresenceIconsLocal = mapped.get("HashesToFiles").keySet().stream()
+                            .map(a -> mirror + "/rich-presence-icons/" + a + ".png")
+                            .sorted()
+                            .collect(Collectors.toList());
+                }
+
+                // and they should also match the list present at list.json
+                JSONArray richPresenceIconListJson;
+                try (InputStream is = ConnectionUtils.openStreamWithTimeout(mirror + "/rich-presence-icons/list.json")) {
+                    richPresenceIconListJson = new JSONArray(IOUtils.toString(is, UTF_8));
+                }
+                List<String> richPresenceIconsList = new ArrayList<>();
+                for (Object o : richPresenceIconListJson) {
+                    richPresenceIconsList.add(mirror + "/rich-presence-icons/" + o + ".png");
+                }
+                richPresenceIconsList.sort(Comparator.naturalOrder());
+
+                if (!richPresenceIcons.equals(richPresenceIconsLocal) || !richPresenceIcons.equals(richPresenceIconsList)) {
+                    throw new IOException("Banana Mirror Rich Presence Icons contents at " + mirror + " don't match the ones we have saved locally");
+                }
             }
         }
     }
